force-app/main/default/objects/sugati__Flight_Alert_Message__c/sugati__Flight_Alert_Message__c.object-meta.xml
<CustomObject>
    <label>Flight Alert Message</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0000}</displayFormat>
        <label>Flight Alert Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flight Alert Messages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>