force-app/main/default/objects/sugati__Flight_Alert_Message__c/fields/sugati__S_FAM_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_FAM_Field_Name__c</fullName>
    <label>Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>