force-app/main/default/objects/sugati__Flight_Alert_Message__c/fields/sugati__S_FAM_Flight_Alert__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_FAM_Flight_Alert__c</fullName>
    <label>Flight Alert</label>
    <referenceTo>sugati__Flight_Alert__c</referenceTo>
    <relationshipLabel>Flight Alert Message</relationshipLabel>
    <relationshipName>Flight_Alert_Message</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>