force-app/main/default/objects/sugati__Flight_Alert_Message__c/fields/sugati__S_FAM_Old_Value__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_FAM_Old_Value__c</fullName>
    <label>Old Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>